<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/box_one_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/WhiteBox"/>

    <TextView
            android:id="@+id/box_two_text"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="@dimen/button_margin"
            app:layout_constraintTop_toBottomOf="@id/box_one_text"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/WhiteBox"
            android:text="@string/box_two"/>

    <TextView
            android:id="@+id/box_three_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_three"
            style="@style/WhiteBox"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            app:layout_constraintTop_toTopOf="@id/box_two_text"
            app:layout_constraintStart_toEndOf="@id/box_two_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/box_four_text"/>

    <TextView
            android:id="@+id/box_four_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_four"
            style="@style/WhiteBox"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            app:layout_constraintTop_toBottomOf="@id/box_three_text"
            app:layout_constraintStart_toStartOf="@id/box_three_text"
            app:layout_constraintEnd_toEndOf="@id/box_three_text"
            app:layout_constraintBottom_toTopOf="@id/box_five_text"/>

    <TextView
            android:id="@+id/box_five_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_five"
            style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintStart_toStartOf="@id/box_four_text"
            app:layout_constraintEnd_toEndOf="@id/box_four_text"
            app:layout_constraintBottom_toBottomOf="@id/box_two_text"/>

    <TextView
            android:id="@+id/label_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textStyle="bold"
            android:textSize="@dimen/how_to_play_text_size"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/info_text"
            app:layout_constraintBottom_toBottomOf="@id/info_text"
    />
    <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tap_the_screen_and_buttons"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            app:layout_constraintStart_toEndOf="@id/label_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/info_top_margin"
            app:layout_constraintTop_toBottomOf="@id/box_two_text"
    />

    <Button
            android:id="@+id/red_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/yellow_button"
            android:text="@string/red"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
    />

    <Button
            android:id="@+id/yellow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/red_button"
            app:layout_constraintStart_toEndOf="@id/red_button"
            app:layout_constraintEnd_toStartOf="@id/green_button"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="@string/yellow"
            android:fontFamily="@font/roboto"
    />

    <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/yellow_button"
            app:layout_constraintStart_toEndOf="@id/yellow_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/green"
            android:fontFamily="@font/roboto"
            android:layout_marginEnd="@dimen/button_margin"
    />
</android.support.constraint.ConstraintLayout>